--- a/redirect-service/package.json
+++ b/redirect-service/package.json
@@ -3,9 +3,9 @@
   "description": "Shorten Service for URL Shortener - Microservices Based Architecture",
   "scripts": {
     "build": "tsc",
-    "start:dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
-    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
-    "test": "jest"
+    "start:dev": "cross-env NODE_ENV=development tsx watch src/server.ts",
+    "start:prod": "cross-env NODE_ENV=production node dist/server.js",
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -24,10 +24,12 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.7",
+    "@types/redis-mock": "^0.17.3",
     "@types/supertest": "^6.0.3",
-    "jest": "^30.0.3",
     "pino-pretty": "^13.0.0",
+    "redis-mock": "^0.56.3",
     "supertest": "^7.1.1",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
