--- a/shorten-service/package.json
+++ b/shorten-service/package.json
@@ -1,10 +1,11 @@
 {
   "name": "shorten-service",
   "description": "Shorten Service for URL Shortener - Microservices Based Architecture",
+  "type": "module",
   "scripts": {
     "build": "tsc",
-    "start:dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
-    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
+    "start:dev": "cross-env NODE_ENV=development tsx watch src/server.ts",
+    "start:prod": "cross-env NODE_ENV=production node dist/server.js",
     "test": "jest"
   },
   "dependencies": {
@@ -24,9 +25,9 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.7",
     "@types/supertest": "^6.0.3",
-    "jest": "^30.0.3",
     "pino-pretty": "^13.0.0",
     "supertest": "^7.1.1",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
